# 08_Scientific_Literature_Search

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_colab.txt
.github/workflows/: ci.yml
Report and Slides/: Report.tex  Slides.tex
app/: gradio_app.py
configs/: infer.yaml  train.yaml
data/: README.md
deploy/: README_HF_SPACE.md
docs/: DESIGN_BRIEF.md  agent_architecture.md  architecture.md  continual_learning_monitoring.md  data_card.md  data_description.md  deployment.md  ethics_statement.md  evaluation.md  model_card.md  model_selection.md  privacy_robustness.md  problem_definition.md  project_plan.md  slide_deck_outline.md
models/: README.md
notebooks/: COLAB_GUIDE.md  SciSearch_Colab_Training_H100_AUTOPILOT.ipynb
scripts/: quickstart.sh  train_colab.sh
src/scisearch/: __init__.py  cli.py  config.py  logging_utils.py
src/scisearch/agent/: __init__.py  llm_orchestrator.py  policy.py  search_agent.py  state.py  tools.py
src/scisearch/analysis/: __init__.py  error_analysis.py  latency.py
src/scisearch/api/: __init__.py  app_combined.py  dependencies.py  main.py  schemas.py  ui.py
src/scisearch/automation/: __init__.py  autopilot.py
src/scisearch/autoreport/: __init__.py  artifact_loader.py  charts.py  report_pdf.py  slides_pptx.py
src/scisearch/data/: __init__.py  corpus.py  download_dataset.py  pairs.py  samples.py
src/scisearch/grading/: __init__.py  checklist.py
src/scisearch/models/: __init__.py  bm25.py  model_registry.py  reranker.py  retriever.py  vector_store.py
src/scisearch/monitoring/: __init__.py  drift_report.py
src/scisearch/search/: __init__.py  engine.py  expand.py  facets.py  hybrid.py
src/scisearch/training/: __init__.py  evaluate.py  metrics.py  tune.py  (+1 more)
tests/: conftest.py  test_eval_grade.py  test_retrieval.py  test_search_agent.py
